--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+a<link href="//raw.githubusercontent.com/mrzzcn/bootstrap/master/dist/css/bootstrap.min.c" media="all" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="//raw.githubusercontent.com/mrzzcn/bootstrap/master/dist/js/bootstrap.min.js"></script>
+</head>
 <body>
 <h1>Hello World</h1>
+
 <p>I'm hosted with GitHub Pages.</p>
 <p>This is phase II</p>
 </body>
