--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-a<link href="//raw.githubusercontent.com/mrzzcn/bootstrap/master/dist/css/bootstrap.min.c" media="all" rel="stylesheet" type="text/css">
+<link href="//raw.githubusercontent.com/mrzzcn/bootstrap/master/dist/css/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="//raw.githubusercontent.com/mrzzcn/bootstrap/master/dist/js/bootstrap.min.js"></script>
 </head>
+
 <body>
 <h1>Hello World</h1>
 
