--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <!--
 Design by TEMPLATED
 http://templated.co
 Released for free under the Creative Commons Attribution License
 
-Name       : PlainDisplay 
+Name       : PlainDisplay
 Description: A two-column, fixed-width design with dark color scheme.
 Version    : 1.0
 Released   : 20140309
@@ -12,94 +12,110 @@ Released   : 20140309
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Jack Zhang(张振)</title>
-<meta name="keywords" content="张振,Jack,C#,Asp.net,entityframe work,javascript,jquery,bootstrap,xml,html,css" />
-<meta name="description" content="" />
-<link href="http://fonts.googleapis.com/css?family=Varela" rel="stylesheet" />
-<link href="default.css" rel="stylesheet" type="text/css" media="all" />
-<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
-<!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Jack Zhang(张振)</title>
+    <meta name="keywords" content="张振,Jack,C#,Asp.net,entityframe work,javascript,jquery,bootstrap,xml,html,css" />
+    <meta name="description" content="" />
+    <link href="http://fonts.googleapis.com/css?family=Varela" rel="stylesheet" />
+    <link href="default.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="fonts2.css" rel="stylesheet" type="text/css" media="all" />
+    <!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 </head>
 <body>
-<div id="wrapper">
-    <div id="header-wrapper">
-        <div id="header" class="container">
-            <div id="logo">
-                <h1><a href="#">Jack</a></h1>
-            </div>
-            <div id="menu">
-                <ul>
-                    <li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
-                    <li><a href="#about" accesskey="2" title="">About me</a></li>
-                    <li><a href="#works" accesskey="3" title="">Sample works</a></li>
-                    <li><a href="#Careers" accesskey="4" title="">Careers</a></li>
-                    <li><a href="#contact" accesskey="5" title="">Contact me</a></li>
-                </ul>
+    <div id="wrapper">
+        <div id="header-wrapper">
+            <div id="header" class="container">
+                <div id="logo">
+                    <h1><a href="#">Jack</a></h1>
+                </div>
+                <div id="menu">
+                    <ul>
+                        <li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
+                        <li><a href="#about" accesskey="2" title="">About me</a></li>
+                        <li><a href="#works" accesskey="3" title="">Sample works</a></li>
+                        <li><a href="#Careers" accesskey="4" title="">Careers</a></li>
+                        <li><a href="#contact" accesskey="5" title="">Contact me</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-    <a name="about"></a>
-    <div id="banner">
-        <div class="container">
+        <a name="about" class="break"></a>
+        <div id="banner">
+            <div class="container">
+                <div class="title">
+                    <h2>Etiam rhoncus volutpat</h2>
+                    <span class="byline">Proin gravida porttitor accumsan</span>
+                </div>
+                <ul class="actions">
+                    <li><a href="#" class="button">Etiam posuere</a></li>
+                </ul>
+
+            </div>
+        </div>
+        <a name="works" class="break"></a>
+        <div id="extra" class="container">
             <div class="title">
-                <h2>Etiam rhoncus volutpat</h2>
-                <span class="byline">Proin gravida porttitor accumsan</span> </div>
+                <h2>Praesent scelerisquet</h2>
+                <span class="byline">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue</span>
+            </div>
+            <div id="three-column">
+                <div class="boxA">
+                    <div class="box">
+                        <span class="fa fa-cloud-download"></span>
+                        <p>Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
+                    </div>
+                </div>
+                <div class="boxB">
+                    <div class="box">
+                        <span class="fa fa-cogs"></span>
+                        <p>Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis.</p>
+                    </div>
+                </div>
+                <div class="boxC">
+                    <div class="box">
+                        <span class="fa fa-user"></span>
+                        <p> Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus.</p>
+                    </div>
+                </div>
+            </div>
             <ul class="actions">
                 <li><a href="#" class="button">Etiam posuere</a></li>
             </ul>
         </div>
-    </div>
-    <a name="works"></a>
-    <div id="extra" class="container">
-        <div class="title">
-            <h2>Praesent scelerisquet</h2>
-            <span class="byline">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue</span> </div>
-        <div id="three-column">
-            <div class="boxA">
-                <div class="box"> <span class="fa fa-cloud-download"></span>
-                    <p>Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
+        <a name="Careers" class="break"></a>
+        <div id="featured">
+            <div class="container">
+                <div class="title">
+                    <h2>Fusce ultrices fringilla metus</h2>
+                    <span class="byline">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue</span>
                 </div>
+                <p>This is <strong>PlainDisplay</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
             </div>
-            <div class="boxB">
-                <div class="box"> <span class="fa fa-cogs"></span>
-                    <p>Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis.</p>
-                </div>
-            </div>
-            <div class="boxC">
-                <div class="box"> <span class="fa fa-user"></span>
-                    <p> Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus.</p>
-                </div>
-            </div>
+            <ul class="actions">
+                <li><a href="#" class="button">Etiam posuere</a></li>
+            </ul>
         </div>
-        <ul class="actions">
-            <li><a href="#" class="button">Etiam posuere</a></li>
-        </ul>
+        <a name="contact" class="break"></a>
+        <div id="page" class="container">
+            <div class="title">
+                <h2>Get in touch.</h2>
+                <span class="byline">I WILL BE GLAD TO HEAR FROM YOU!</span>
+            </div>
+            <p>
+                <ul class="contact">
+                    <li><a href="https://www.facebook.com/zhen.zhang.cn" class="icon icon-facebook" target="_blank"><span></span></a></li>
+                    <li><a href="http://www.linkedin.com/pub/zhen-zhang/56/225/a00" class="icon icon-linkedin" target="_blank"><span>LinkedIn</span></a></li>
+                    <li><a href="https://plus.google.com/u/0/+mrzzcn" class="icon icon-google-plus" target="_blank"><span>Google+</span></a></li>
+                    <li><a href="https://twitter.com/mrzhangzhen" class="icon icon-twitter" target="_blank"><span>Twitter</span></a></li>
+                    <li><a href="https://github.com/mrzzcn" class="icon icon-github" target="_blank"><span>Github</span></a></li>
+                    <li><a href="mailto:mrzzcn@gmail.com" class="icon icon-envelope" target="_blank"><span>Gmail</span></a></li>
+                </ul>
+            </p>
+        </div>
     </div>
-    <a name="Careers"></a>
-	<div id="featured">
-		<div class="container">
-			<div class="title">
-				<h2>Fusce ultrices fringilla metus</h2>
-				<span class="byline">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue</span> </div>
-			<p>This is <strong>PlainDisplay</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
-		</div>
-		<ul class="actions">
-			<li><a href="#" class="button">Etiam posuere</a></li>
-		</ul>
-	</div>
-	<div id="contact" class="container">
-		<div class="title">
-			<h2>Nulla luctus eleifend</h2>
-			<span class="byline">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</span> </div>
-		<p> Vivamus fermentum nibh in augue. Praesent a lacus at urna congue rutrum. Nulla enim eros nibh. Duis enim nulla, luctus eu, dapibus lacinia, venenatis id, quam. Vestibulum imperdiet, magna nec eleifend rutrum, nunc lectus vestibulum velit, euismod lacinia quam nisl id lorem. Quisque erat. Vestibulum pellentesque, justo mollis pretium suscipit, justo nulla blandit libero, in blandit augue justo quis nisl. Fusce mattis viverra elit. Fusce quis tortor.</p>
-		<ul class="actions">
-			<li><a href="#" class="button">Etiam posuere</a></li>
-		</ul>
-	</div>
-</div>
-<div id="copyright" class="container">
-	<p>&copy; 张振. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
-</div>
+    <div id="copyright" class="container">
+        <p>&copy; 张振. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+    </div>
 </body>
 </html>
